be/src/exec/orc-metadata-utils.h
@@ -38,8 +38,9 @@ class OrcSchemaResolver {
       bool* pos_field, bool* missing_field) const;
 
   /// Build a map from each orc::Type id to a SchemaPath. The map will be used in
-  /// creating OrcColumnReaders.
-  Status BuildSchemaPaths(int num_partition_keys, std::vector<SchemaPath>* paths);
+  /// creating OrcColumnReaders. It contains all ORC types including unmaterialized ones.
+  Status BuildSchemaPaths(int num_partition_keys,
+      std::vector<SchemaPath>* col_id_path_map) const;
 
  private:
   const HdfsTableDescriptor& tbl_desc_;
@@ -50,7 +51,9 @@ class OrcSchemaResolver {
   Status ValidateType(const ColumnType& type, const orc::Type& orc_type) const
       WARN_UNUSED_RESULT;
 
-  static void BuildSchemaPath(const orc::Type& node, SchemaPath* path,
-      std::vector<SchemaPath>* paths);
+  /// Helper function to build 'col_id_path_map' start from 'node' whose corresponding
+  /// SchemaPath is 'path'.
+  static void BuildSchemaPathHelper(const orc::Type& node, SchemaPath* path,
+      std::vector<SchemaPath>* col_id_path_map);
 };
 }
